<resources>
    <string name="app_name">醇狼</string>
    <string name="rmb">¥</string>
    <string name="rmb_one">¥%s</string>
    <string name="rmb_two">(¥%s)</string>
    <!-- 粉丝的字符码 -->
    <string name="fans_manager">粉丝管理</string>
    <string name="fans_list">粉丝列表</string>
    <string name="fans_my_code">我的邀请码</string>
    <string name="fans_invite">邀请粉丝</string>
    <string name="fans_invite_tips">全民抢粉丝，赢取海量佣金！</string>
    <string name="fans_num">粉丝数：%s 位</string>
    <string name="fans_name">粉丝名称</string>
    <string name="fans_contact_way">联系方式</string>
    <string name="fans_register_money">注册金额</string>
    <string name="fans_total_commission">累计佣金(￥)</string>
    <string name="fans_not_user">未认证用户</string>
    <string name="fans_your_invite_code">您的邀请码：</string>
    <string name="fans_invite_person">您的邀请人：</string>
    <string name="fans_invite_money">邀请粉丝赢佣金</string>
    <string name="fans_input_phone_tips">请输入您的手机号码</string>
    <string name="fans_input_code">请输入验证码</string>
    <string name="fans_send_code">发送验证码</string>
    <string name="fans_reset_send">重新发送</string>
    <string name="fans_register_time">注册时间</string>
    <string name="fans_register">注册</string>
    <string name="fans_copy">复制</string>
    <string name="classify">分类</string>

    <string name="fans_register_app">注册醇狼APP</string>
    <string name="fans_input_invite_code">填写邀请码</string>
    <string name="authenticated">已认证</string>
    <string name="star_level">星级卖家</string>
    <string name="partner">城市合伙人</string>
    <string name="my_data">我的资料</string>
    <string name="my_authentication">我的认证</string>
    <string name="login_pwd">登录密码</string>
    <string name="pay_pwd">支付密码</string>
    <string name="address_manager">地址管理</string>
    <string name="bank_manager">银行卡管理</string>


    <string name="remark_label">备\u3000\u3000注：</string>
    <string name="into_store">进店</string>
    <string name="into_seller_center">进入卖家中心 >></string>
    <string name="into_buyer_center">进入买家中心 >></string>
    <string name="find_all_order">查看全部订单</string>
    <string name="my_recommend">我的推荐</string>
    <string name="pay_phone">验证码将会发送到%s手机上</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="submit">提交</string>
    <string name="reset_send">重新发送</string>
    <string name="edit_pwd">修改密码</string>
    <string name="commit">提交</string>
    <string name="edit_pay_pwd">修改支付密码</string>
    <string name="sell_goods">该店家有%s款商品正在销售</string>
    <string name="action_number">%s次出价</string>
    <string name="openPicStr">%ss | 完成</string>
    <string name="store_home">店铺首页</string>
    <string name="store_details">店铺详情</string>
    <string name="deposit_security_desc">保证金交纳说明:
        \n 1.保证金交纳成功后，用户即可成为星级卖家。尊享海量特权
        \n 2.卖家升级为星级卖家，可无限发布商品，发布的商品有优先排序功能。
    </string>
    <string name="deposit_security_desc_three">保证金交纳权益：
        \n 1、您已成为星级卖家，尊享海量特权。
        \n 2、可无限发布商品。
        \n 3、发布的商品享有优先排序功能。
    </string>
    <string name="refund_tips">*单笔提现现额最大为50000.00元，最小为100.00元。</string>
    <string name="refund_deposit_security_tips">温馨提示
    \n 1.撤销保证金后，您不再是星级卖家，无法享用海量特权。
    \n 2.撤销保证金后，您已发布的商品会自动下架。
    \n 3.撤销保证金后，您最多只能发布3款商品。</string>
    <string name="skip_str">跳过</string>
    <string name="into_str">进入</string>
    <string name="payment_deposit">交纳保证金</string>
    <string name="deposit_success">您已成功交纳保证金，升级为星级卖家！</string>
    <string name="deposit_desc">撤销保证金后：
\n 1、您的卖家账户变成普通卖家，失去星级卖家的相关特权。
        \n 2、您的撤销申请经平台审核后，保证金将从冻结金额转入账户 余额， 您即可进行资金提现；撤销申请时间约为1~3个工作日。
\n 3、如您的撤销申请审核失败，请致电400-788-9550咨询原因， 感谢您的理解与支持。
</string>
    <string name="privilege_introduction">1、独一无二的星级标识，信用度更高；
       \n 2、星级卖家店铺装饰；
       \n 3、发布商品自由，不受数量限制；
       \n 4、比普通卖家商品排序更靠前；
       \n 5、比普通卖家更容易卖出藏酒；
       \n 6、新功能优先体验权！
    </string>
    <string name="refund_success_desc">您的撤销保证金申请已提交成功！\n 平台处理时间约为1~3个工作日，请您耐心等待！\n撤销的保证金将直接退回到您的可用余额</string>
    <string name="title_activity_goods_audit">GoodsAuditActivity</string>
    <string name="person_one_tips">认证说明： \n1、为保障双方利益，在平台发布商品需要进行实名认证；\n2、作为卖家若成功售出商品后，平台将收取订单总额的3.5%作为平台佣金！</string>
    <string name="check_auth_pass_one_person">您的个人认证已通过！</string>
    <string name="check_auth_pass_one_company">您的企业认证已通过！</string>
    <string name="check_auth_pass_two">恭喜您可以在醇狼平台发布商品啦！ \n若交易成功，平台每单将收取3.5%的佣金。</string>
    <string name="check_auth_fail_one_person">您的个人认证未通过！</string>
    <string name="check_auth_fail_one_company">您的企业认证未通过！</string>
    <string name="check_auth_fail_two">距离发布商品还差一点点哦，我们期待您再次提交。</string>
    <string name="appraise_num">累计鉴别已超过%s件</string>
    <string name="appraiser">鉴定师</string>

    <string name="appraise_scope">鉴定范围：%s</string>
    <string name="appraise_require">鉴定要求：%s</string>
    <string name="appraise_attention">注意事项：%s</string>
    <string name="contact_platform">平台将在24小时之内与您联系，注意保持手机畅通\n您可拨打全国热线“400-189-0095”或添加 客服微信“chunlang9”联系客服</string>
    <string name="request_appraise">+求鉴定</string>

    <string name="appraise_goods_title">商品标题：%s</string>
    <string name="appraise_goods_series">所属系列：%s</string>
    <string name="appraise_goods_year">商品年份：%s</string>
    <string name="appraise_goods_other">其他说明：%s</string>
    <string name="edit_info">编辑资料</string>
    <string name="done">完成</string>
    <string name="add_appraise_tips1">我们正在招募\n有经验的鉴定师</string>
    <string name="cart_empty">购物车空空如也\u3000\n来挑几瓶好酒吧！</string>
    <string name="appraise_success_tips">\u3000\u3000您申请的鉴定，将会在1-2个工作日内完成。鉴定结果查看此流程【我的-买家中心-鉴定报告】</string>
    <string name="quick_cash">快速变现</string>
    <string name="commit_cash_apply">已提交变现申请</string>
    <string name="auction_deposit">该拍品需交纳定金%s。</string>
    <string name="auction_deposit_tips">建议您使用%s确保账户有足够的钱款哦！</string>
    <string name="auction_deposit_tips_value">余额支付、微信支付、支付宝支付、银联支付</string>

</resources>
