<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <TextView android:id="@+id/tvLoginPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_centerVertical="true"
            android:text="@string/login_pwd"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:gravity="center_vertical"
            android:textColor="@color/t_black"
            android:drawableRight="@mipmap/black_right_arrow"
            android:textSize="@dimen/sp_mid" />
        <TextView android:id="@+id/tvMyData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_centerVertical="true"
            android:text="我的资料"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:gravity="center_vertical"
            android:textColor="@color/t_black"
            android:drawableRight="@mipmap/black_right_arrow"
            android:textSize="@dimen/sp_mid" />
        <TextView android:id="@+id/tvMyAttestation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_centerVertical="true"
            android:text="我的认证"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:gravity="center_vertical"
            android:textColor="@color/t_black"
            android:drawableRight="@mipmap/black_right_arrow"
            android:textSize="@dimen/sp_mid" />
        <TextView  android:id="@+id/tvAddressManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_centerVertical="true"
            android:text="@string/address_manager"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:gravity="center_vertical"
            android:textColor="@color/t_black"
            android:drawableRight="@mipmap/black_right_arrow"
            android:textSize="@dimen/sp_mid" />
        <TextView android:id="@+id/tvBankManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_centerVertical="true"
            android:text="@string/bank_manager"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:gravity="center_vertical"
            android:textColor="@color/t_black"
            android:drawableRight="@mipmap/black_right_arrow"
            android:textSize="@dimen/sp_mid" />
        <TextView android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_centerVertical="true"
            android:text="关于醇狼"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:gravity="center_vertical"
            android:textColor="@color/t_black"
            android:drawableRight="@mipmap/black_right_arrow"
            android:textSize="@dimen/sp_mid" />
        <TextView android:id="@+id/tvUseAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_centerVertical="true"
            android:text="使用协议"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:gravity="center_vertical"
            android:textColor="@color/t_black"
            android:drawableRight="@mipmap/black_right_arrow"
            android:textSize="@dimen/sp_mid" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvLogOut"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/round_red_bg"
        android:gravity="center"
        android:text="退出登录"
        android:textColor="@color/t_white"
        android:textSize="@dimen/text_size_15sp" />


</RelativeLayout>